--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
   </header>
 
   <div class="toc">
-    <h2>Table of conents</h2>
+    <h2>Table of contents</h2>
     {% include toc.html html=content %}
   </div>
   <div class="post-content e-content" itemprop="articleBody">
