--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,11 @@ layout: default
         Published: {{ page.date | date: date_format }}
       </time>
       <time class="dt-modified" datetime="{{ page.last_modified_at | date_to_xmlschema }}" itemprop="dateModified">
-        • Last modified: {{ page.last_modified_at | date: "%b %-d, %Y, %H:%M" }}
+        {%- if page.last_modified_at -%}
+        • Last modified: {{ page.last_modified_at | date: date_format }}
+        {%- else -%}
+        • Last modified: {{ page.date | date: date_format }}
+        {%- endif %}
       </time>
       {%- if page.author -%}
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
